prevent button shaping changing by wrapping

--- a/assets/css/mixin.sass
+++ b/assets/css/mixin.sass
@@ -102,6 +102,7 @@ $TOOLTIP_LAYER: 2
   align-items: center
   gap: 5px
   transition: background 0.3s ease-in-out
+  white-space: nowrap
   &:focus
     outline: none
   &:hover
